@@ -514,6 +514,9 @@ Extension Modules
 Build
 -----
 
+- Issue #3101: Helper functions _add_one_to_C() and _add_one_to_F() become
+  _Py_add_one_to_C() and _Py_add_one_to_F(), respectively.
+
 - Issue #9700: define HAVE_BROKEN_POSIX_SEMAPHORES under AIX 6.x.  Patch by
   Sébastien Sablé.
 
